запустил, приступил к отладке серверной части

--- a/openocd/STM32F103xx.cfg
+++ b/openocd/STM32F103xx.cfg
@@ -159,3 +159,7 @@ $_TARGETNAME configure -event trace-config {
 	# assignment
 	mmw 0xE0042004 0x00000020 0
 }
+
+init
+tpiu config internal - uart off 64000000
+itm ports on
